Add scraper module

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,7 +16,6 @@ pycparser
 pycrypto
 pyelftools
 pylzma
-pymisp
 pypdns
 pypssl
 pytest
@@ -57,3 +56,11 @@ git+https://github.com/androguard/androguard.git
 
 # archiving
 rarfile
+
+# MISP
+git+https://github.com/MISP/PyTaxonomies.git
+pymisp
+
+# Scrapy
+scrapy
+scrapy-splash
