--- a/requirements-modules.txt
+++ b/requirements-modules.txt
@@ -55,5 +55,4 @@ rarfile==3.0
 yara-python==3.5.0
 
 # Scraper
-Scrapy==1.4.0
-scrapy-splash==0.7.2
+git+https://github.com/viper-framework/ScrapySplashWrapper.git
